[package]
name = "genref"
description = "Vale's generational references in Rust"
readme = "README.md"
repository = "https://github.com/Kile-Asmussen/genref"
license = "MIT"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[toolchain]
channel = "nightly"
