[package]
name = "genref"
description = "A variation of Vale's generational references in Rust"
readme = "README.md"
repository = "https://github.com/Kile-Asmussen/genref"
license = "MIT"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0" }
parking_lot = { version = "0.12.1", features = ["nightly"] }
lock_api = { version = "0.4.7" }
bumpalo = { version = "3.12.0" }

[toolchain]
channel = "nightly"